@@ -2,7 +2,8 @@
   :description  "A re-frame effects handler for listening-for and then post-processing dispatched events."
   :url          "https://github.com/Day8/re-frame-forward-events-fx.git"
   :license      {:name "MIT"}
-  :dependencies [[org.clojure/clojure        "1.10.1"  :scope "provided"]
+  :dependencies [[thheller/shadow-cljs       "2.8.41" :scope "provided"]
+                 [org.clojure/clojure        "1.10.1"  :scope "provided"]
                  [org.clojure/clojurescript  "1.10.520" :scope "provided"]
                  [re-frame                   "0.10.8" :scope "provided"]]
 
@@ -10,14 +11,12 @@
              :dev   {:dependencies [[karma-reporter     "3.1.0"]
                                     [binaryage/devtools "0.9.10"]]
                      :plugins      [[lein-ancient       "0.6.15"]
-                                    [lein-cljsbuild     "1.1.7"]
-                                    [lein-npm           "0.6.2"]
                                     [lein-shell         "0.5.0"]]}}
 
   :clean-targets  [:target-path "run/compiled"]
 
   :resource-paths ["run/resources"]
-  :jvm-opts       ["-Xmx1g" "-XX:+UseConcMarkSweepGC"]
+  :jvm-opts       ["-Xmx1g"]
   :source-paths   ["src"]
   :test-paths     ["test"]
 
@@ -25,42 +24,24 @@
                                       :macosx  "open"
                                       :linux   "xdg-open"}}}
 
-  :deploy-repositories [["releases"  {:sign-releases false :url "https://clojars.org/repo"}]
-                        ["snapshots" {:sign-releases false :url "https://clojars.org/repo"}]]
+  :deploy-repositories [["clojars"  {:sign-releases false
+                                     :url "https://clojars.org/repo"
+                                     :username :env/CLOJARS_USERNAME
+                                     :password :env/CLOJARS_PASSWORD}]]
 
   :release-tasks [["vcs" "assert-committed"]
                   ["change" "version" "leiningen.release/bump-version" "release"]
                   ["vcs" "commit"]
                   ["vcs" "tag" "v" "--no-sign"]
-                  ["deploy"]
+                  ["deploy" "clojars"]
                   ["change" "version" "leiningen.release/bump-version"]
                   ["vcs" "commit"]
                   ["vcs" "push"]]
 
-  :npm {:devDependencies [[karma                 "1.0.0"]
-                          [karma-cljs-test       "0.1.0"]
-                          [karma-chrome-launcher "0.2.0"]
-                          [karma-junit-reporter  "0.3.8"]]}
-
-  :cljsbuild {:builds [{:id           "test"
-                        :source-paths ["test" "src"]
-                        :compiler     {:preloads             [devtools.preload]
-                                       :external-config      {:devtools/config {:features-to-install [:formatters :hints]}}
-                                       :output-to     "run/compiled/browser/test.js"
-                                       :source-map    true
-                                       :output-dir    "run/compiled/browser/test"
-                                       :optimizations :none
-                                       :source-map-timestamp true
-                                       :pretty-print  true}}
-                       {:id           "karma"
-                        :source-paths ["test" "src"]
-                        :compiler     {:output-to     "run/compiled/karma/test.js"
-                                       :source-map    "run/compiled/karma/test.js.map"
-                                       :output-dir    "run/compiled/karma/test"
-                                       :optimizations :whitespace
-                                       :main          "re-frame-forward-events-fx.test_runner"
-                                       :pretty-print  true}}]}
-
-  :aliases {"test-once"   ["do" "clean," "cljsbuild" "once" "test," "shell" "open" "test/test.html"]
-            "test-auto"   ["do" "clean," "cljsbuild" "auto" "test,"]
-            "karma-once"  ["do" "clean," "cljsbuild" "once" "karma,"]})
+  :aliases {"dev" ["do"
+                   ["shell" "npm" "install"]
+                   ["run" "-m" "shadow.cljs.devtools.cli" "watch" "browser-test"]]
+            "ci" ["do"
+                  ["shell" "npm" "install"]
+                  ["run" "-m" "shadow.cljs.devtools.cli" "compile" "ci"]
+                  ["shell" "karma" "start" "--single-run" "--reporters" "junit,dots"]]})
